<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:fontFamily="cursive"
            android:text="@string/teacher_s_issue_book"
            android:textColor="#0800F0"
            android:textSize="@dimen/_40sdp"

            />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_255sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp">

            <EditText
                android:id="@+id/bookid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/book_id"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_255sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/teacher_s_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_255sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp">

            <EditText
                android:id="@+id/issuedate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/issue_date"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck"
                android:focusable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/issuebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_29sdp"
            android:backgroundTint="#E8D4CE"
            android:text="@string/issue"
            android:textColor="#212121" />
    </LinearLayout>

</ScrollView>










