<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_book"
            android:textColor="@color/primary"
            android:textSize="@dimen/_30sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="cursive"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_course"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/studentcourcename"
            android:layout_width="@dimen/_255sdp"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/border"
            android:ems="10"
            android:spinnerMode="dropdown"
            android:entries="@array/cources"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_2sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_course_year"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/studentcourceyear"
            android:layout_width="@dimen/_255sdp"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/border"
            android:ems="10"
            android:spinnerMode="dropdown"
            android:entries="@array/year"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_2sdp"/>

        <Button
            android:id="@+id/searchbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_29sdp"
            android:backgroundTint="#E68303"
            android:text="@string/search"
            android:textColor="#000000"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>