<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:neumorph_backgroundColor="@color/background"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shadowElevation="@dimen/_5sdp"
        app:neumorph_shapeAppearance="@style/NeumorphismCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="@dimen/_14sdp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/book_name"
                    android:textColor="#F44336"
                    android:textSize="@dimen/_20sdp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_5sdp"
                                android:fontFamily="serif"
                                android:gravity="start"
                                android:text="@string/course"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_8sdp" />


                            <TextView
                                android:id="@+id/t2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_5sdp"
                                android:fontFamily="serif"
                                android:text="@string/author_name"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_8sdp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_5sdp"
                                android:fontFamily="serif"
                                android:gravity="start"
                                android:text="@string/year"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_8sdp" />


                            <TextView
                                android:id="@+id/t3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_5sdp"
                                android:fontFamily="serif"
                                android:text="@string/publication_name"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_8sdp" />


                        </LinearLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_5sdp"
                                android:fontFamily="serif"
                                android:gravity="start"
                                android:text="@string/father_s_name"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_8sdp" />


                            <TextView
                                android:id="@+id/t5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_5sdp"
                                android:fontFamily="serif"
                                android:gravity="start"
                                android:text="@string/an"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_8sdp" />


                        </LinearLayout>



                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_5sdp"
                                android:fontFamily="serif"
                                android:layout_gravity="start"
                                android:text="@string/phone"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_8sdp" />

                            <TextView
                                android:id="@+id/t4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_5sdp"
                                android:fontFamily="serif"
                                android:layout_gravity="start"
                                android:text="@string/_1000"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_8sdp" />





                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </soup.neumorphism.NeumorphCardView>

</androidx.cardview.widget.CardView>