<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:fontFamily="cursive"
            android:text="@string/add_student"
            android:textColor="@color/primary"
            android:textSize="@dimen/_40sdp"

            />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_255sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp">

            <EditText
                android:id="@+id/studentname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/student_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_255sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp">

            <EditText
                android:id="@+id/studentfathername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/father_s_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_255sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp">

            <EditText
                android:id="@+id/studentphone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="TextFields,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_255sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp">

            <Spinner
                android:id="@+id/studentcourcename"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/border"
                android:entries="@array/cources"
                android:hint="@string/cource_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:spinnerMode="dropdown"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_255sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp">

            <Spinner
                android:id="@+id/studentyear"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/border"
                android:entries="@array/year"
                android:hint="@string/cource_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:spinnerMode="dropdown"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/addbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_29sdp"
            android:backgroundTint="#E8D4CE"
            android:text="@string/add"
            android:textColor="#212121" />


    </LinearLayout>

</ScrollView>